@@ -94,7 +94,6 @@ sub run {
     ) if !$self->{client};
 
     foreach my $job (@{$self->{jobs}}) {
-        my $pid         = $job->{params}->{PID};
         my $max_threads = $job->{params}->{THREADS_QUERY};
         my $timeout     = $job->{params}->{TIMEOUT};
 
@@ -102,10 +101,13 @@ sub run {
         my $credentials = _getIndexedCredentials($job->{credentials});
 
         # set internal state
-        $self->{pid} = $pid;
+        $self->{pid} = $job->{params}->{PID} || '';
 
-        # send initial message to the server
-        $self->_sendStartMessage();
+        # newer server won't need START message if PID is provided on <DEVICE/>
+        my $skip_start_stop = any { defined($_->{PID}) } @{$job->{devices}};
+
+        # send initial message to server unless it supports newer protocol
+        $self->_sendStartMessage() unless $skip_start_stop;
 
         my ($debug_sent_count, $started_count) = ( 0, 0 );
         my %running_threads = ();
@@ -152,6 +154,10 @@ sub run {
                             MESSAGE => $EVAL_ERROR
                         }
                     };
+
+                    # Inserted back device PID in result if set by server
+                    $result->{PID} = $device->{PID} if defined($device->{PID});
+
                     $self->{logger}->error("[thread $id] $EVAL_ERROR");
                 }
 
@@ -228,16 +234,16 @@ sub run {
             $self->_sendResultMessage($result);
         }
 
-        # send final message to the server before cleaning threads
-        $self->_sendStopMessage();
+        # send final message to the server before cleaning threads unless it supports newer protocol
+        $self->_sendStopMessage() unless $skip_start_stop;
 
         if ($started_count) {
             $self->{logger}->debug("cleaning $started_count worker threads");
             $_->join() foreach threads->list(threads::joinable);
         }
 
-        # send final message to the server
-        $self->_sendStopMessage();
+        # send final message to the server unless it supports newer protocol
+        $self->_sendStopMessage() unless $skip_start_stop;
     }
 }
 
@@ -285,10 +291,17 @@ sub _sendStopMessage {
 sub _sendResultMessage {
     my ($self, $result) = @_;
 
+    my $pid = $self->{pid};
+    if (exists($result->{PID})) {
+        # Don't keep PID in result but we want to set it as parent PROCESSNUMBER
+        $pid = $result->{PID} if defined($result->{PID});
+        delete $result->{PID};
+    }
+
     $self->_sendMessage({
         DEVICE        => $result,
         MODULEVERSION => $VERSION,
-        PROCESSNUMBER => $self->{pid}
+        PROCESSNUMBER => $pid
     });
 }
 
@@ -337,6 +350,9 @@ sub _queryDevice {
          logger  => $self->{logger},
          datadir => $self->{datadir}
     );
+
+    # Inserted back device PID in result if set by server
+    $result->{PID} = $device->{PID} if defined($device->{PID});
 
     return $result;
 }
